src/snapshots/tim__integration_test__integration_test__lsp_completion.snap
---
source: src/integration_test.rs
expression: test_runner.content()
---
<Untitled> [INSERT]                     │Completion [NORMAL:LINE]               
1│mod foo;                              │1│[1] option                           
2│use std::opt                          │2│[2] option_env                       
3│                                      │ │                                     
4│fn main() {                           │ │                                     
5│    foo::foo();                       │ │                                     
6│    println!("Hello, world!");        │ │                                     
7│}                                     │ │                                     
8│                                      │ │                                     
 │                                      │ │                                     
 │                                      │ │                                     
 │                                      │ │                                     
 │                                      │───────────────────────────────────────
 │                                      │ [NORMAL:CUSTOM]                       
 │                                      │  1│Optional values.                   
 │                                      │  2│                                   
 │                                      │  3│Type [`Option`] represents an optio
 │                                      │  4│is either [`Some`] and contains a v
 │                                      │  5│does not. [`Option`] types are very
 │                                      │  6│they have a number of uses:        
 │                                      │  7│                                   
 │                                      │  8│* Initial values                   
 │                                      │  9│* Return values for functions that 
 │                                      │ 10│  over their entire input range (pa
