src/snapshots/tim__integration_test__integration_test__saving_should_not_crash.snap
---
source: src/integration_test.rs
expression: test_runner.content()
---
<Untitled> [INSERT]                                                             
mod foo;                                                                        
                                                                                
fn main() {                                                                     
    println!("Hello, world!");                                                  
}                                                                               
abc                                                                             
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
