src/snapshots/tim__integration_test__integration_test__search-2.snap
---
source: src/integration_test.rs
expression: test_runner.content()
---
<Untitled> [INSERT]                                                             
mod foo;                                                                        
                                                                                
fn main_hello() {                                                               
    println!("Hello, world!");                                                  
}                                                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
