src/snapshots/tim__integration_test__integration_test__search.snap
---
source: src/integration_test.rs
expression: test_runner.content()
---
<Untitled> [NORMAL:CUSTOM]                                                      
pub fn foo() {}                                                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
